--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_script:
   - pip install --upgrade pip
   - sudo pip install linkchecker
 script: |
-  linkchecker "https://jugalkishore.me"
+  linkchecker https://jugalkishore.me
