--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 os: linux
 dist: bionic
 language: python
+cache: pip
 before_script:
   - pip install --upgrade pip
   - sudo pip install linkchecker
