--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,10 +21,17 @@ jobs:
         run: git clone "${{ github.event.inputs.GIT_URL }}" --branch "${{ github.event.inputs.BRANCH }}"
 
       - name: Build Docker Image
-        run: ls
+        run: |
+          cd internet_test_tools
+          if [[ ! -f "Dockerfile" ]]; then exit 1; else docker build -t crazyuploader/internet_test_tools:latest .; fi
       
       - name: DockerHub Login
         run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Docker Push
+        run: |
+        docker images
+        docker push internet_test_tools
