--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -32,5 +32,5 @@ jobs:
 
       - name: Docker Push
         run: |
-          docker images
+          docker images | grep internet_test_tools
           docker push crazyuploader/internet_test_tools
